--- a/ecommerce.yml
+++ b/ecommerce.yml
@@ -2,5 +2,5 @@ token:
   expiration_time: 864000000
   secret: user_test_token_123456789123456789
 
-gateway:
-  ip: 10.81.96.144
+# gateway:
+#   ip: 10.81.96.144
